fjerner cxf og endrer cucumber steps til ny syntax